Fix: Fix layout issues

--- a/src/styles/sections/Examples.module.css
+++ b/src/styles/sections/Examples.module.css
@@ -238,3 +238,13 @@
         transform: translateX(100%);
     }
 }
+
+@media (max-width: 744px) {
+    .examples .content {
+        grid-template-columns: 1fr;
+    }
+
+    .examples .item {
+        margin-bottom: 16px;
+    }
+}
